<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Remember The Tahini</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="new_task_btn" translatable="false">New Task</string>
    <string name="title_activity_create_task" translatable="false">Create New Task</string>
    <string name="title_activity_update_task" translatable="false">Edit Task</string>
    <string name="task_description" translatable="false">Task Description:</string>
    <string name="create_task_btn" translatable="false">Create Task</string>
    <string name="discard_btn" translatable="false">Discard</string>
    <string name="delete_btn" translatable="false">Delete Task</string>
    <string name="update_task_btn" translatable="false">Update Task</string>
    <string name="priority_prompt" translatable="false">Choose Priority</string>
    <string name="priority_high" translatable="false">High</string>
    <string name="priority_med" translatable="false">Medium</string>
    <string name="priority_norm" translatable="false">Normal</string>

    <string-array name="priority_arrays" translatable="false">
        <item>All</item>
        <item>Normal</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string name="title_activity_map" translatable="false">Map</string>

</resources>
