<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.lianigroup.rememberthetahini.CreateTaskActivity" 
    android:orientation="vertical"
    android:layout_marginBottom="10dp">    
    
     <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Task Description:"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="10dp"/>
    
    <EditText
        android:id="@+id/taskDescEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/task_description"
        android:maxLines="4" >

    </EditText>
   
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Priority:"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
       
        <RadioButton
             android:id="@+id/normRB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/priority_norm"
             android:layout_marginLeft="5dp"
             android:onClick="onRadioButtonClicked"/>
         <RadioButton
             android:id="@+id/medRB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/priority_med"
             android:onClick="onRadioButtonClicked"/>
          <RadioButton
             android:id="@+id/highRB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/priority_high"
             android:layout_marginRight="5dp"
             android:onClick="onRadioButtonClicked"/>
     </RadioGroup>
     
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Task Reminder:"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>
  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="10dp">
                 
         <EditText
            android:id="@+id/taskDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:hint="Pick Date" />
      
     	<EditText
            android:id="@+id/taskTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_weight="1"
            android:onClick="showTimePickerDialog"
            android:hint="Pick Time" >
        </EditText>
    </LinearLayout>
    
     <Button 
	     	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        style="@style/btnStyleBlue"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="20dp"
	   		android:text="Pick Where" 
	   		android:onClick="showMapWindow"
	   	/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="10dp">
       
          
          <Button
              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update_task_btn"
                android:layout_marginRight="5dp"
                style="@style/btnStyleBlue"
               
                android:onClick="updateTaskClick"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discard_btn"
               	style="@style/btnStyleRed"
                android:layout_marginLeft="5dp"
                android:onClick="discardBtnClick"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            style="@style/btnStyleBlue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/delete_btn" 
            android:onClick="deleteBtnClick"/>

    

    </RelativeLayout>
   
</LinearLayout>

