<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.lianigroup.rememberthetahini.CreateTaskActivity" >
  
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/card_background"
       android:layout_marginTop="1dp" >
			<!--  
          <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:gravity="center_vertical"
                android:text="@string/task_description"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="10dp"/>
                -->
    
		    <EditText
		        android:id="@+id/taskDescEdit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:hint="Write ToDo.."
		        android:maxLines="4" >
		
		    </EditText> 
   </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/card_background" 
       android:layout_marginTop="1dp" >

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="match_parent"
	    android:gravity="center_vertical"
	    android:paddingLeft="8dp"
	    android:paddingRight="8dp"
	    android:text="Priority:"
	    android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
       
        <RadioButton
             android:id="@+id/normRB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/priority_norm"
             android:layout_marginLeft="5dp"
             android:onClick="onRadioButtonClicked"/>
         <RadioButton
             android:id="@+id/medRB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/priority_med"
             android:onClick="onRadioButtonClicked"/>
          <RadioButton
             android:id="@+id/highRB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/priority_high"
             android:layout_marginRight="5dp"
             android:onClick="onRadioButtonClicked"/>
     </RadioGroup>
     </LinearLayout>
      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/card_background"
       android:layout_marginTop="1dp"  >
     
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_vertical"
        android:text="Time Reminder:"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        />
  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="10dp">
                 
         <EditText
            android:id="@+id/taskDateEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="Pick Date.."
             />
      
     	<EditText
            android:id="@+id/taskTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_weight="1"
            android:gravity="center_horizontal"
             
            android:hint="Pick Time.." >
        </EditText>
        </LinearLayout>
    </LinearLayout>
      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/card_background"
       android:layout_marginTop="1dp" 
       android:orientation="horizontal" >
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_vertical"
        android:text="Geofence Reminder:"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>
      <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_margin="10dp"
        android:onClick="showMapWindow"
        
        />
     
     
    
     </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="10dp">
         <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_task_btn"
                android:layout_marginLeft="10dp"
                style="@style/btnStyleGreen"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:onClick="createTaskClick"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discard_btn"
               	style="@style/btnStyleGrey"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:onClick="discardBtnClick"/>
    </LinearLayout>

  

   
</LinearLayout>
